# haskell-playground

./: docker-compose.yml  haskell-playground.cabal  stack.yaml  test.json
app/: Main.hs
resources/: env.sh  pizza.json  schema.sql
src/: CountEntries.hs  DynamoSimpleTest.hs  DynamodbTest.hs  Expression.hs  GetPasshhrase.hs  GetPassphrase.hs  GetPassphraseMaybeT.hs  MaybeT.hs  Model.hs  PersistentTest.hs  PostgresMigrationTest.hs  PostgresTest.hs  ReaderTest.hs  Schema.hs  StateTTest.hs  StateTest.hs  TestIO.hs  ThiagoPolymorphicMadness.hs  ValidationTest.hs  aesonTest.hs
test/: Spec.hs
