name:                haskell-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jing
maintainer:          brianjing404@gmail.com
copyright:           2017 Brian Jing
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CountEntries
                    --  , PostgresMigrationTest
                    --  , PostgresTest
                    --  , PersistentTest
                    --  , ValidationTest
                    --  , Model
                    --  , StateTest
                    --  , StateTTest
                     , DynamoSimpleTest
                     , Schema
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , lens
                     , mtl
                     , transformers
                     , filepath

                     , dynamodb-simple
                     , conduit
                     , containers
                     , tagged
                     , time
                     , amazonka
                     , amazonka-dynamodb
                     , uuid
                     , safe-exceptions
                     , scientific
  default-language:    Haskell2010

executable haskell-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-playground
                     , aeson
                     , text
                     , bytestring
                     , directory
                     , dynamodb-simple
  default-language:    Haskell2010

test-suite haskell-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , haskell-playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-playground
